<resources>
    <string name="app_name">NikoShop</string>
    <string name="sale_icon">Sale</string>
    <string name="main_text">Главная</string>
    <string name="about_text">Про нас</string>
    <string name="contacts_text">Контакты</string>
    <string name="logo_of_text1">Courses</string>
    <string name="logo_of_text2">App</string>
    <string name="start_text">Старт \n обучения:</string>
    <string name="level_text">Уровень</string>
    <string name="container_text">Корзина</string>
</resources>